# untitled_users

./: .dockerignore  Cargo.toml  Dockerfile
k8/: deploy.yaml  mongo_deploy.yaml  mongo_service.yaml  service.yaml  volume.yaml  volume_claim.yaml
src/: configuration.rs  lib.rs  main.rs  routes.rs
src/axum/extractors/: message_queue.rs  metrics_repository.rs  mod.rs  search_repository.rs
src/client/: mod.rs  request.rs  response.rs
src/client/axum/extractors/: users_client.rs
src/host/: configuration.rs  mod.rs  routes.rs
src/host/axum/: mod.rs
src/host/axum/extractors/: authenticate.rs  message_queue.rs  metrics_queue.rs  metrics_repository.rs  mod.rs  search_repository.rs  user_repository.rs
src/host/message_queue/message/: mod.rs  user_created.rs  user_viewed.rs
src/host/metrics/: mod.rs
src/host/metrics/message/: error.rs  mod.rs  user_viewed.rs
src/host/repository/: deadpool.rs  error.rs  mod.rs  mongo.rs  postgres.rs  redis.rs
src/host/repository/metrics/: cache.rs  mod.rs  mongo.rs  postgres.rs
src/host/repository/search/: mod.rs  mongo.rs  postgres.rs
src/host/repository/users/: cache.rs  mod.rs  mongo.rs  period.rs  postgres.rs  ranking.rs
src/host/web/: add_project.rs  create_user.rs  get_user.rs  list_users.rs  mod.rs  popular.rs  request.rs  response.rs  routes.rs  search_users.rs
src/message_queue/: mod.rs
src/message_queue/message/: error.rs  user_created.rs  user_viewed.rs
src/repository/: deadpool.rs  error.rs  mod.rs  mongo.rs  postgres.rs
src/repository/metrics/: cache.rs  mod.rs  mongo.rs  postgres.rs
src/repository/search/: mongo.rs  postgres.rs
src/repository/users/: cache.rs  mod.rs  mongo.rs  postgres.rs
src/web/: add_project.rs  create_user.rs  get_user.rs  list_users.rs  map_users.rs  mod.rs  popular.rs  search_users.rs  update_user.rs
tf/: ecr.tf
users_database/k8/: job.yaml
users_database/migrations/2024-03-14-183108_create_users/: up.sql
users_database/migrations/2024-05-11-160924_create_user_projects/: down.sql  up.sql
users_database/migrations/2024-05-16-004014_add_user_project_name/: down.sql  up.sql
users_database/migrations/2024-05-28-000030_create_user_metrics/: down.sql  up.sql
users_database/migrations/2024-06-06-011159_users_search/: down.sql  up.sql
users_database/migrations/2024-07-07-234231_alter_users_primary_key/: down.sql  up.sql
