[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-layer = "0.3.2"
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["protobuf"] }
log = "0.4.20"
env_logger = "0.11.3"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
prost = "0.12.0"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
deadpool = { version = "0.12.0", features = ["managed"] }
rand = "0.8.5"
async-channel = "2.3.1"
auth_client = { git = "https://github.com/chasb96/untitled_auth_client", default-features = false }
projects_client = { git = "https://github.com/chasb96/untitled_projects_client", default-features = false }
search_client = { git = "https://github.com/chasb96/untitled_search_client", default-features = false }
or_status_code = { git = "https://github.com/chasb96/or_status_code" }
log_unwrap = { git = "https://github.com/chasb96/log_unwrap" }
log_layer = { git = "https://github.com/chasb96/log_layer" }
json_or_protobuf = { git = "https://github.com/chasb96/json_or_protobuf" }
redis = { version = "0.25.4", features = ["async-std-comp", "aio", "ahash", "r2d2"] }
mongodb = "3.0.0"